fix(header): fix z-index to 2

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -21,7 +21,7 @@
   right: 0;
   bottom: 0;
   background-color: var(--color--primary-green);
-  z-index: 1;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
